--- a/overrides/after-build/root/all/config/themeFilterConfig.json
+++ b/overrides/after-build/root/all/config/themeFilterConfig.json
@@ -1,2 +1,4 @@
 {
+  "punk": { "genre_txt": { "in": ["Punk", "PunkRock", "PunknRoll", "Folk-Punk"] } },
+  "hardcore": { "genre_txt": { "in": ["Hardcore"] } }
 }
